# grimoire

./: .ghci  .gitignore  Makefile  Procfile  README.md  grimoire  grimoire.cabal
src/: Main.hs
src/Grimoire/: ArchiveCache.hs  Cache.hs  Config.hs  GitHub.hs  Handlers.hs  Types.hs
src/Grimoire/Cache/: Archive.hs  Repository.hs  Revision.hs
