name:                grimoire
version:             0.1.0
synopsis:            Opscode Community Compatible Cookbook Endpoint
license:             OtherLicense
license-file:        LICENSE
author:              Brendan Hay <brendan@soundcloud.com>
maintainer:          Brendan Hay <brendan@soundcloud.com>
homepage:            http://github.com/brendanhay/grimoire
bug-reports:         http://github.com/brendanhay/grimoire/issues
category:            Web
stability:           Experimental
build-type:          Simple
cabal-version:       >= 1.2

Executable grimoire
  hs-source-dirs:    src
  main-is:           Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.10,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded
                 -Wall
                 -fwarn-tabs
                 -funbox-strict-fields
                 -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded
                 -Wall
                 -fwarn-tabs
                 -funbox-strict-fields
                 -O2
