name:                 grimoire
version:              0.1.0
synopsis:             Opscode Community Compatible Cookbook Endpoint
license:              OtherLicense
license-file:         LICENSE
author:               Brendan Hay <brendan@soundcloud.com>
maintainer:           Brendan Hay <brendan@soundcloud.com>
homepage:             http://github.com/brendanhay/grimoire
bug-reports:          http://github.com/brendanhay/grimoire/issues
category:             Web
stability:            Experimental
build-type:           Simple
cabal-version:        >= 1.10

Executable grimoire
  hs-source-dirs:     src
  main-is:            Main.hs

  default-language:   Haskell98
  default-extensions: OverloadedStrings
                    , RecordWildCards
                    , TypeSynonymInstances
                    , FlexibleInstances
                    , MultiParamTypeClasses

  build-depends:      base
                    , ghc-prim
                    , aeson
                    , bytestring   >= 0.9.1
                    , conduit
                    , http-conduit
                    , http-types
                    , containers
                    , data-default
                    , directory
                    , lens
                    , mtl          >= 2 && < 3
                    , snap-core    >= 0.9 && < 0.10
                    , snap-extras  == 0.1.7
                    , snap-server  >= 0.9 && < 0.10
                    , stm
                    , text         == 0.11.2.3
                    , MonadCatchIO-transformers
                    , transformers
                    , unix-time
                    , vector

  if impl(ghc >= 6.12.0)
    ghc-options:      -threaded
                      -Wall
                      -fwarn-tabs
                      -funbox-strict-fields
                      -O2
                      -fno-warn-unused-do-bind
  else
    ghc-options:      -threaded
                      -Wall
                      -fwarn-tabs
                      -funbox-strict-fields
                      -O2
